<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/location_name_main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rocket"
        android:textColor="@color/PrimaryText"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        app:layout_constraintBottom_toTopOf="@+id/generate_code_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generate_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_code"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:padding="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_name_main_textview"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_code_button" />

    <Button
        android:id="@+id/settings_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/PrimaryColor"
        android:text="@string/setting"
        android:textColor="@color/PrimaryText"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="@id/signIn_main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_main_textview"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/PrimaryText"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/signIn_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_main_textview"

        android:backgroundTint="@color/PrimaryColor"
        android:textColor="@color/PrimaryText"
        app:cornerRadius="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/PrimaryText"
        app:strokeWidth="2dp"/>

    <EditText
        android:id="@+id/loation_id_main_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/PrimaryText"
        android:gravity="center"
        android:hint="@string/location_id"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_main_button" />


    <ProgressBar
        android:id="@+id/loading_spinner_main"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="90dp"
        android:indeterminateTint="@color/PrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>